--- a/topicos/08.md
+++ b/topicos/08.md
@@ -3,6 +3,8 @@
 #### Assunto
 
 - Caracterização ampla da Engenharia de Software.
+  - Em tópico anterior cada estudante dedicou-se a um tópico específico. Agora é o momento de 
+  contato com todos eles. 
   - Em coformidade com o Swebok [aqui](https://www.computer.org/education/bodies-of-knowledge/software-engineering), 
   execute a atividade requisitada abaixo.
 
