--- a/topicos/12.md
+++ b/topicos/12.md
@@ -8,7 +8,9 @@ na perspectiva dos artefatos que podem ser produzidos sob o rótulo de alguém r
 - Muitos documentos, artefatos ou itens de informação podem ser desconhecidos. Alguns deles são apresentados abaixo:
   - Revisão de registros (_review minutes_). Aquilo que é produzido em uma reunião, por exemplo, resulta em registros. Este item 
   de informação é um tipo de relatório para rever tais registros. 
-- Verifica se usou "fundações" onde possivelmente "fundamentos" ficaria melhor.
+- Tradições:
+  - Verifica se usou "fundações" onde possivelmente "fundamentos" ficaria melhor.
+  - Plano de Capacidade em vez de Plano de Capacitação.
 - Há itens que aparecem em mais de uma disciplina, por exemplo, "interface description".
 - Numere os itens de 1 até 74, ou seja, preceda o nome do item pelo número correspondente conforme a norma.
   
