--- a/topicos/12.md
+++ b/topicos/12.md
@@ -13,6 +13,9 @@ na perspectiva dos artefatos que podem ser produzidos sob o rótulo de alguém r
   - Plano de Capacidade em vez de Plano de Capacitação.
 - Há itens que aparecem em mais de uma disciplina, por exemplo, "interface description".
 - Numere os itens de 1 até 74, ou seja, preceda o nome do item pelo número correspondente conforme a norma.
+- Cada um dos itens é classificado em: (i) plano; (ii) política; (iii) procedimento; (iv) relatório; (v) requisição e (vi) especificação. 
+Identifique o tipo de cada item de informação, por exemplo, por meio de cores e, neste caso, crie uma legenda correspondente. Você pode usar
+outra estratégia, caso considere mais adequado. 
   
 #### Atividade:
 
