--- a/topicos/13.md
+++ b/topicos/13.md
@@ -18,4 +18,4 @@ considera "mais representativo" ou "mais importante" dentre aqueles das áreas d
 #### Artefatos
 
 1. Crie uma _issue_ de título "Itens de informação representativos" e cujo corpo deve conter
-a URL do seu mapa mental já com o asterisco indicando o item mais representativo do grupo em questão.
+a URL do seu mapa mental já com o asterisco indicando o item mais representativo para cada uma das áreas do SWEBOK empregadas.
