--- a/topicos/14.md
+++ b/topicos/14.md
@@ -3,8 +3,11 @@
 #### Assunto
 
 - A norma ISO/IEC/IEEE 15289 - Systems and software engineering - Content of life-cycle information items (documentation), 
-4th edition, 2019, apresenta uma lista de 94 itens de informação, digamos, "documentos", que são pertinentes ao 
+4th edition, 2019, apresenta uma lista de 74 itens de informação pertinentes ao 
 desenvolvimento e evolução de sistemas de software. 
+- Em tópico anterior foi citado, por engano, que tal norma identifica 94 itens. De fato, não
+é um simples erro de digitação, a versão anterior, terceira versão, possui 94 itens, em vez dos
+atuais 94 da versão corrente.
   
 #### Atividade:
 
