--- a/topicos/14.md
+++ b/topicos/14.md
@@ -5,20 +5,20 @@
 - A norma ISO/IEC/IEEE 15289 - Systems and software engineering - Content of life-cycle information items (documentation), 
 4th edition, 2019, apresenta uma lista de 74 itens de informação pertinentes ao 
 desenvolvimento e evolução de sistemas de software. 
+
 - Em tópico anterior foi citado, por engano, que tal norma identifica 94 itens. De fato, não
 é um simples erro de digitação, a versão anterior, terceira versão, possui 94 itens, em vez dos
-atuais 94 da versão corrente.
-  
+atuais 74 da versão corrente.
+
+- Conforme a norma, tais itens de informação são elementos de documentação. Adicionalmente, tal norma não inclui:
+(a) produtos de trabalho (_work products_); (b) modelos; (c) software e (d) outros artefatos que não são itens de informação. 
+
 #### Atividade:
 
-1. Em atividades anteriores um mapa mental foi requisitado e melhorias foram sugeridas. Nesta atividade, a intenção é identificar,
-para cada um dos 15 grupos do SWEBOK, conforme o seu mapa mental, o item de informação de maior destaque,
-ou principal dentre aqueles eventualmente identificados. Observe que itens de informação são demandados ou não,
-contudo, em um cenário onde você só poderia citar um deles, quando houver mais de um, qual seria o "mais
-representativo"? Atualize o seu mapa mental para destacar, com um asterisco, o item de informação que você
-considera "mais representativo" ou "mais importante" dentre aqueles das áreas do SWEBOK em questão. 
+1. Em conformidade com a norma supracitada, quais são os tipos de itens de informação? Qual é o propósito de cada um
+deste tipos? Não confunda os tipos de itens de informação com os itens de informação propriamente ditos.
 
 #### Artefatos
 
-1. Crie uma _issue_ de título "Itens de informação representativos" e cujo corpo deve conter
-a URL do seu mapa mental já com o asterisco indicando o item mais representativo para cada uma das áreas do SWEBOK empregadas.
+1. Crie uma _issue_ de título "Tipos" e cujo corpo deve conter
+a resposta para a questão apresentada acima.
